--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmuziShop</title>
 </head>
+
 <body>
     <header class="header">
         <nav class="menu">
@@ -32,9 +33,130 @@
                 <li><a href=""><img src="" alt=""></a></li>
             </ul>
         </div>
+        <div class="header_button">
+            <button>Shop Now</button>
+        </div>
+        <div class="header_name">
+            <h1>We have the best smoothies in the world!</h1>
+        </div>
     </header>
-    <section></section>
-    
+    <section class=What_are_these_smoothies_block>
+        <h2>What are these smoothies?</h2>
+        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,
+            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such
+            as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant
+            milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
+        <div class="characteristics_smoothies">
+            <div>
+                <img src="" alt="">
+                <h3>Plant Based</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Vegan</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Paleo</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Gluten-Free</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Corn-Free</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Soy-Free</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Ayurvedic</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Made With Love</h3>
+            </div>
+        </div>
+    </section>
+    <section class="about_block">
+        <div class="main_image">
+            <img src="" alt="">
+        </div>
+        <div class="about_block_name">
+            <h2>What makes Smoothie an <span>awesome drink?</span></h2>
+        </div>
+        <ul class="about_block_characteristics">
+            <li>Crunchy Puffs Texture</li>
+            <li>100 Calories per drink</li>
+            <li>4g Plant Protein</li>
+            <li>Good source of Magnesium & Vitamin B6</li>
+            <li>No Sugar in our Savory Flavors</li>
+            <li>Non-GMO, Vegan & Paleo</li>
+            <li>Gluten-Free & Grain-Free</li>
+            <li>Corn-Free & Soy-Free</li>
+        </ul>
+        <div class="about_block_link">
+            <a href="">About Organic Smoothie</a>
+        </div>
+    </section>
+    <section class="products_smoothie_block">
+        <div class="chokolate">
+            <img src="" alt="">
+            <h3>Dark Chocolate Smoothie<span>100 ml</span></h3>
+            <a href=""></a>
+        </div>
+        <div class="vegan">
+            <img src="" alt="">
+            <h3>Vegan Lettuce Smoothie<span>100 ml</span></h3>
+            <a href=""></a>
+        </div>
+        <div class="lemon">
+            <img src="" alt="">
+            <h3>Lemon Ginger Smoothie<span>100 ml</span></h3>
+            <a href=""></a>
+        </div>
+        <div class="turmeric">
+            <img src="" alt="">
+            <h3>Turmeric Garlic Smoothie<span>100 ml</span></h3>
+            <a href=""></a>
+        </div>
+    </section>
+    <section class="our_story_block">
+        <div class="our_story_block_name">
+            <h2>Our story</h2>
+        </div>
+        <div class="our_story_block_content">
+            <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
+                and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
+        </div>
+        <div class="our_story_block_btn">
+            <button>Who we are</button>
+        </div>
+        <div class="our_story_block_image">
+            <img src="" alt="">
+        </div>
+    </section>
+    <section class="testimonials_block">
+        <div class="testimonials_block_name">
+            <h2>Why clients LOVE us?</h2>
+        </div>
+        <div class="testimonials_block_content">
+            <p>”Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really
+                make use of Smoothie! Smoothie saved my business.”<span>- from Santa Monica, CA</span></p>
+        </div>
+        <div class="testimonials_block_image"><img src="" alt=""></div>
+        <div class="btn_left">
+            <img src="..//smuzi/img/arrow__3265.jpg" alt="">
+        </div>
+        <div class="btn_right">
+            <img src="..//smuzi/img/arrow__right.jpg" alt="">
+        </div>
+        
+    </section>
+
 </body>
 
 </html>
