--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -154,9 +154,81 @@
         <div class="btn_right">
             <img src="..//smuzi/img/arrow__right.jpg" alt="">
         </div>
-        
     </section>
-
+    <section class="our_block">
+        <div class="our_block_name">
+            <h2>Our blog</h2>
+        </div>
+        <div class="our_block_image">
+            <img src="" alt="">
+        </div>
+        <div class="">
+            <h3>ASAFOETIDA - THE NEXT TURMERIC?</h3>
+        </div>
+        <div class="our_block_date">
+            <span>Jun 16, 2020</span>
+        </div>
+        <div class="our_block_content">
+            <p>If the fruit ingredients and the green vegetable ingredients are both juiced ahead of time, the mixed
+                juice doesn't even have to be blended like a smoothie, i.e. a green juice or anything...</p>
+        </div>
+        <div class="our_block_link">
+            <a href="">Read More</a>
+        </div>
+        <div class="instagram_logo">
+            <span><img src="..//smuzi/img/icon_3294.jpg" alt="">ashasuperfoods</span>
+        </div>
+    </section>
+    <section class="instagram_images">
+        <div class="first_image">
+            <img src="" alt="">
+        </div>
+        <div class="second_image">
+            <img src="" alt="">
+        </div>
+        <div class="third_image">
+            <img src="" alt="">
+        </div>
+        <div class="fourth_image">
+            <img src="" alt="">
+        </div>
+        <div class="fifth_image">
+            <img src="" alt="">
+        </div>
+    </section>
+    <footer>
+        <div class="logo">
+            <img src="..//smuzi/img/logo__4052.jpg" alt="">
+        </div>
+        <div class="information">
+            <h3>Information</h3>
+            <ul>
+                <li>Search</li>
+                <li>Contact us</li>
+                <li>Terms & Conditions</li>
+                <li>Privacy Policy</li>
+            </ul>
+        </div>
+        <div class="payment">
+            <h3>Payment</h3>
+            <ul>
+                <li><img src="..//smuzi/img/amex_3358.jpg" alt=""></li>
+                <li><img src="..//smuzi/img/apple_pay_3359.jpg" alt=""></li>
+                <li><img src="..//smuzi/img/maestro_3360.jpg" alt=""></li>
+                <li><img src="..//smuzi/img/discover_3361.jpg" alt=""></li>
+                <li><img src="..//smuzi/img/jcb_3362.jpg" alt=""></li>
+                <li><img src="..//smuzi/img/mastercard_3363.png" alt=""></li>
+                <li><img src="..//smuzi/img/paypal_3364.jpg" alt=""></li>
+                <li><img src="..//smuzi/img/shopify_pay_3366.jpg" alt=""></li>
+                <li><img src="..//smuzi/img/visa_3367.jpg" alt=""></li>
+            </ul>
+        </div>
+        <div class="don’t_miss_out!">
+            <h3>Don’t miss out!</h3>
+            <span>Subscribe to our newsletter</span>
+        </div>
+    </footer>
 </body>
 
 </html>
+
