--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -55,7 +55,7 @@
         </div>
     </header>
 
-    <section class=smoothies>
+    <section class="smoothies">
 
         <h2 class="smoothies__title title">What are these smoothies?</h2>
 
@@ -111,12 +111,12 @@
 
     <section class="about">
 
-        <div class="about__img img">
-            <img class="img__content" src="" alt="">
+        <div class="about__inner">
+            <img class="about__img" src="" alt="">
         </div>
 
-        <div class="about__content content">
-            <h2 class="content__subtitle">What makes Smoothie an <span>awesome drink?</span></h2>
+        <div class="about__content">
+            <h2 class="about__title">What makes Smoothie an <span>awesome drink?</span></h2>
 
             <ul class="content__list ">
                 <li class="content__item">Crunchy Puffs Texture</li>
@@ -136,18 +136,18 @@
 
     <section class="products">
 
-        <div class="products__chocolate chocolate">
+        <div class="products__chocolate">
 
             <img class="chocolate__img" src="" alt="">
 
-            <h3 class="chocolate__subtitle">Dark Chocolate Smoothie</h3>
+            <h3 class="chocolate__title">Dark Chocolate Smoothie</h3>
             <span class="">100 ml</span>
 
             <button class="chocolate__btn btn chocolate__btn--transparent">Buy</button>
 
         </div>
 
-        <div class="products__vegan vegan">
+        <div class="products__vegan">
 
             <img class="vegan__img" src="" alt="">
 
@@ -157,7 +157,7 @@
 
         </div>
 
-        <div class="products__lemon lemon">
+        <div class="products__lemon">
 
             <img class="lemon__img" src="" alt="">
 
@@ -167,7 +167,7 @@
 
         </div>
 
-        <div class="products__turmeric turmeric">
+        <div class="products__turmeric">
 
             <img class="turmeric__img" src="" alt="">
 
@@ -180,34 +180,34 @@
 
     <section class="story">
 
-        <div class="story__">
-            <h2 class="">Our story</h2>
+        <div class="story__inner2">
+            <h2 class="inner2__title">Our story</h2>
 
-            <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
+            <p class="inner2__text">As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
                 and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
 
-            <button>Who we are</button>
+            <button class="inner2__btn btn inner2__btn-- ">Who we are</button>
         </div>
 
-        <div class="story__image">
-            <img src="" alt="">
+        <div class="story__content">
+            <img class="content__img" src="" alt="">
         </div>
 
     </section>
 
     <section class="testimonials">
 
-        <h2>Why clients <span>LOVE</span> us?</h2>
+        <h2 class="testimonials__title">Why clients <span>LOVE</span> us?</h2>
 
-        <div class="testimonials__content">
-            <div>
-                <q>Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really
-                    make use of Smoothie! Smoothie saved my business.</q>
+        <div class="testimonials__conteiner">
+            <div class="testimonials_content">
+                <blockquote class="content_citation">"Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really
+                    make use of Smoothie! Smoothie saved my business".</blockquote>
 
-                <cite>from Santa Monica, CA</cite>
+                <cite class="">from Santa Monica, CA</cite>
             </div>
 
-            <img src="" alt="">
+            <img class="testimonials__img" src="" alt="">
 
         </div>
 
