--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -64,50 +64,50 @@
 
         <h2 class="smoothies__title title">What are these smoothies?</h2>
 
-        <p class="smoothies__text text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,
-            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such
+        <p class="smoothies__text text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,<br/>
+            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such<br/>
             as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant
-            milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
+            milk, nuts,<br/> nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
 
         <div class="smoothies__content">
 
             <div class="smoothies__cards">
-                <img class="smoothies__img" src="" alt="">
+                <img class="smoothies__img" src="..//smuzi/img/icon_plant.jpg" alt="">
                 <h3 class="smoothies__caption">Plant Based</h3>
             </div>
 
-            <div class="smoothies__cards"></div>>
-                <img class="smoothies__img"  src="" alt="">
+            <div class="smoothies__cards"></div>
+                <img class="smoothies__img"  src="..//smuzi/img/icon_vegan.jpg" alt="">
                 <h3 class="smoothies__caption">Vegan</h3>
             </div>
 
             <div class="smoothies__cards">
-                <img class="smoothies__img" src="" alt="">
+                <img class="smoothies__img" src="..//smuzi/img/icon_paleo.jpg" alt="">
                 <h3 class="smoothies__caption">Paleo</h3>
             </div>
 
             <div class="smoothies__cards">
-                <img class="smoothies__img" src="" alt="">
+                <img class="smoothies__img" src="..//smuzi/img/icon_gluten.jpg" alt="">
                 <h3 class="smoothies__caption">Gluten-Free</h3>
             </div>
 
             <div class="smoothies__cards">
-                <img class="smoothies__img" src="" alt="">
+                <img class="smoothies__img" src="..//smuzi/img/icon_corn.jpg" alt="">
                 <h3 class="smoothies__caption">Corn-Free</h3>
             </div>
 
             <div class="smoothies__cards">
-                <img class="smoothies__img" src="" alt="">
+                <img class="smoothies__img" src="..//smuzi/img/icon_soy.jpg" alt="">
                 <h3 class="smoothies__caption">Soy-Free</h3>
             </div>
 
             <div class="smoothies__cards">
-                <img class="smoothies__img" src="" alt="">
+                <img class="smoothies__img" src="..//smuzi/img/icon_ayurvedic.jpg" alt="">
                 <h3 class="smoothies__caption">Ayurvedic</h3>
             </div>
 
             <div class="smoothies__cards">
-                <img class="smoothies__img" src="" alt="">
+                <img class="smoothies__img" src="..//smuzi/img/icon_love.jpg" alt="">
                 <h3 class="smoothies__caption">Made With Love</h3>
             </div>
         </div>
@@ -117,7 +117,7 @@
     <section class="about">
 
         <div class="about__box">
-            <img class="about__img" src="" alt="">
+            <img class="about__img" src="..//smuzi/img/img_about.png" alt="">
         </div>
 
         <div class="about__content">
