--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -121,7 +121,7 @@
         </div>
 
         <div class="about__content">
-            <h2 class="about__title">What makes Smoothie an <span>awesome drink?</span></h2>
+            <h2 class="about__title">What makes Smoothie an <span class="about__span">awesome drink?</span></h2>
 
             <ul class="about__list">
                 <li class="about__item"><span>Crunchy Puffs</span>Texture</li>
