--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -141,7 +141,7 @@
 
     <section class="products">
 
-        <div class="products__card">
+        <div class="products__card-chocolate">
 
             <img class="products__img" src="..//smuzi/img/chocolate.jpg" alt="">
 
@@ -152,31 +152,34 @@
 
         </div>
 
-        <div class="products__card">
+        <div class="products__card-vegan">
 
             <img class="products__img" src="..//smuzi/img/vegan.jpg" alt="">
 
-            <h3 class="products__title">Vegan Lettuce Smoothie<span class="products__span">100 ml</span></h3>
+            <h3 class="products__title">Vegan Lettuce Smoothie</h3>
+            <span class="products__span">100 ml</span>
 
             <button class="products__btn btn btn--transparent">Buy</button>
 
         </div>
 
-        <div class="products__card">
+        <div class="products__card-lemon">
 
             <img class="products__img" src="..//smuzi/img/lemon.jpg" alt="">
 
-            <h3 class="products__title">Lemon Ginger Smoothie<span class="products__span">100 ml</span></h3>
+            <h3 class="products__title">Lemon Ginger Smoothie</h3>
+            <span class="products__span">100 ml</span>
 
             <button class="products__btn btn btn--transparent">Buy</button>
 
         </div>
 
-        <div class="products__card">
+        <div class="products__card-turmeric">
 
             <img class="products__img" src="..//smuzi/img/turmeric.jpg" alt="">
 
-            <h3 class="products__title">Turmeric Garlic Smoothie<span class="products__span">100 ml</span></h3>
+            <h3 class="products__title">Turmeric Garlic Smoothie</h3>
+            <span class="products__span">100 ml</span>
 
             <button class="products__btn btn btn--transparent">Buy</button>
         </div>
@@ -188,14 +191,14 @@
         <div class="story__box">
             <h2 class="story__title title">Our story</h2>
 
-            <p class="story__text text">As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
-                and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
+            <p class="story__text text">As products typically using raw fruits or vegetables,<br/> smoothies include dietary fiber (e.g. pulp, skin,
+                and seeds) and<br/> so are thicker than fruit juice, often with a consistency similar<br/> to a milkshake.</p>
 
             <button class="story__btn">Who we are</button>
         </div>
 
         <div class="story__content">
-            <img class="story__img" src="" alt="">
+            <img class="story__img" src="..//smuzi/img/img_story.png" alt="">
         </div>
 
     </section>
@@ -206,13 +209,13 @@
 
         <div class="testimonials__inner">
             <div class="testimonials__box">
-                <blockquote class="testimonials__citation">"Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really
-                    make use of Smoothie! Smoothie saved my business".</blockquote>
+                <blockquote class="testimonials__citation">"Smoothie is great. I don't know what else to say. I will<br/> let my mum know about this, she could really
+                    make use<br/> of Smoothie! Smoothie saved my business".</blockquote>
 
                 <cite class="testimonials__user">from Santa Monica, CA</cite>
             </div>
 
-            <img class="testimonials__img" src="" alt="">
+            <img class="testimonials__img" src="..//smuzi/img/img_testi.png" alt="">
 
         </div>
 
