--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -52,25 +52,15 @@
                                 <img class="social__img" src="..//smuzi/img/instagram-icon.png" alt=""></a></li>
                     </ul>
                 </div>
-
-
-
             </div>
-
-
-
         </div>
 
         <div class="header__content">
             <button class="header__btn btn header__btn--green">Shop Now</button>
 
-
             <h1 class="header__title title">We have the best smoothies in the world!</h1>
         </div>
-
-
-
-
+        
     </header>
 
     <section class="smoothies">
@@ -159,7 +149,7 @@
 
         <div class="products__card-chocolate">
 
-            <img class="products__img" src="..//smuzi/img/chocolate.jpg" alt="">
+            <img class="products__img" src="../smuzi/img/chocolate.png" alt="">
 
             <h3 class="products__title">Dark Chocolate Smoothie</h3>
             <span class="products__span">100 ml</span>
@@ -170,7 +160,7 @@
 
         <div class="products__card-vegan">
 
-            <img class="products__img" src="..//smuzi/img/vegan.jpg" alt="">
+            <img class="products__img" src="../smuzi/img/vegan.png" alt="">
 
             <h3 class="products__title">Vegan Lettuce Smoothie</h3>
             <span class="products__span">100 ml</span>
@@ -181,7 +171,7 @@
 
         <div class="products__card-lemon">
 
-            <img class="products__img" src="..//smuzi/img/lemon.jpg" alt="">
+            <img class="products__img" src="../smuzi/img/lemon.png" alt="">
 
             <h3 class="products__title">Lemon Ginger Smoothie</h3>
             <span class="products__span">100 ml</span>
@@ -192,7 +182,7 @@
 
         <div class="products__card-turmeric">
 
-            <img class="products__img" src="..//smuzi/img/turmeric.jpg" alt="">
+            <img class="products__img" src="../smuzi/img/turmeric.png" alt="">
 
             <h3 class="products__title">Turmeric Garlic Smoothie</h3>
             <span class="products__span">100 ml</span>
