--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -172,6 +172,7 @@
             <img class="products__img" src="../smuzi/img/lemon.png" alt="">
 
             <h3 class="products__title">Lemon Ginger Smoothie</h3>
+           
             <span class="products__span">100 ml</span>
 
             <button class="products__btn btn btn--transparent">Buy</button>
@@ -339,9 +340,13 @@
 
         <div class="footer__copyright">
             <samp class="footer__samp">© 2020. All Rights Reserved.</samp>
+        </div>
 
             <a href="#">Go top</a>
-        </div>
+            <button class="footer__btn">
+                <img class="footer__top" src="./img/iIcon.png" alt="">
+            </button>
+        
 
 
 
