--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -196,8 +196,8 @@
         <div class="story__box">
             <h2 class="story__title title">Our story</h2>
 
-            <p class="story__text text">As products typically using raw fruits or vegetables,<br /> smoothies include
-                dietary fiber (e.g. pulp, skin, and seeds) and<br /> so are thicker than fruit juice, often with a consistency similar<br /> to a
+            <p class="story__text text">As products typically using raw fruits or vegetables, smoothies include
+                dietary fiber (e.g. pulp, skin, and seeds) and so are thicker than fruit juice, often with a consistency similar to a
                 milkshake.</p>
 
             <button class="story__btn">Who we are</button>
@@ -328,7 +328,7 @@
 
                 <form class="subscribe__form">
                     <input class="subscribe__registr" type="text" placeholder="Subscribe to our newsletter">
-                    <input class="subscribe__btn" type="submit"></input>>
+                    <button class="subscribe__btn" type="submit">Follow Us</button>
                 </form>
 
 
