--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -38,8 +38,8 @@
                         <li class="personal__list-item"><a class="personal__link" href="">
                                 <img class="personal__img" src="..//smuzi/img/User-icon.png" alt=""></a></li>
                         <li class="personal__list-item"><a class="personal__link" href="">
-                                <img class="personal__img" src="..//smuzi/img/Cart-icon.png" alt=""><span
-                                    class="personal__counter">0</span></a></li>
+                                <img class="personal__img" src="..//smuzi/img/Cart-icon.png" alt="">
+                                <span class="personal__counter">0</span></a></li>
                     </ul>
                 </div>
                 <div class="header__social social">
