--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -18,9 +18,10 @@
                 <ul class="menu__list">
                     <li class="menu__list-item"><a class="menu__link" href="">Home</a></li>
                     <li class="menu__list-item"><a class="menu__link" href="">Shop</a></li>
-                    <li class="menu__list-item"><a class="menu__link" href="">Testimonials</a></li>
-                    <li class="menu__list-item"><a class="menu__link" href="">Blog</a></li>
+                    <li class="menu__list-item"><a class="menu__link" href="">Story</a></li>
                     <li class="menu__list-item"><a class="menu__link" href="">About</a></li>
+                    <li class="menu__list-item"><a class="menu__link" href="">Blog</a></li>
+                    <li class="menu__list-item"><a class="menu__link" href="">Testimonials</a></li>
                 </ul>
             </nav>
 
@@ -227,8 +228,8 @@
         </div>
 
         <div class="testimonials__conteiner">
-            <button class="testimonials__arrow"></button>
-            <button class="testimonials__arrow"></button>
+            <button class="testimonials__arrow-left"></button>
+            <button class="testimonials__arrow-right"></button>
         </div>
 
     </section>
@@ -329,23 +330,23 @@
                 <form class="subscribe__form">
                     <input class="subscribe__registr" type="text" placeholder="Subscribe to our newsletter">
                     <button class="subscribe__btn" type="submit">Follow Us</button>
+                    <ul class="subscribe__list">
+                        <li class="subscribe__item"><a class="subscribe__link" href=""><img class="subscribe__img" src="../smuzi/img/facebook-white.png" alt=""></a></li>
+                        <li class="subscribe__item"><a class="subscribe__link" href=""><img class="subscribe__img" src="../smuzi/img/pinterest-white.png" alt=""></a></li>
+                        <li class="subscribe__item"><a class="subscribe__link" href=""><img class="subscribe__img" src="../smuzi/img/insta-white.png" alt=""></a></li>
+                    </ul>
                 </form>
-
-
             </div>
-
-
         </div>
 
 
         <div class="footer__copyright">
             <samp class="footer__samp">© 2020. All Rights Reserved.</samp>
+            <a class="footer__link" href="#"></a>
+            <button class="footer__btn"></button>
         </div>
 
-            <a href="#">Go top</a>
-            <button class="footer__btn">
-                <img class="footer__top" src="./img/iIcon.png" alt="">
-            </button>
+           
         
 
 
