--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -71,10 +71,8 @@
 
         <p class="smoothies__text text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes
             dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made
-            using other ingredients,
-            such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder,
-            plant
-            milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
+            using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder,
+            plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
 
         <div class="smoothies__content">
 
@@ -129,7 +127,7 @@
             </div>
 
             <div class="about__content">
-                <h2 class="about__title">What makes Smoothie <br />an <span class="about__span">awesome drink?</span>
+                <h2 class="about__title">What makes Smoothie an <span class="about__span">awesome drink?</span>
                 </h2>
 
                 <ul class="about__list">
