--- a/smuzi/index.html
+++ b/smuzi/index.html
@@ -131,14 +131,14 @@
                 </h2>
 
                 <ul class="about__list">
-                    <li class="about__item"><span>Crunchy Puffs</span>Texture</li>
-                    <li class="about__item"><span>100 Calories</span> per drink</li>
-                    <li class="about__item">4g Plant Protein</li>
-                    <li class="about__item">Good source of <span>Magnesium & Vitamin B6</span></li>
-                    <li class="about__item"><span>No Sugar</span> in our Savory Flavors</li>
-                    <li class="about__item"><span>Non-GMO, Vegan & Paleo</span></li>
-                    <li class="about__item"><span>Gluten-Free & Grain-Free</span></li>
-                    <li class="about__item"><span>Corn-Free & Soy-Free</span></li>
+                    <li class="about__item">Crunchy Puffs <span class="about__item-bold">Texture</span></li>
+                    <li class="about__item">100 Calories<span class="about__item-bold">per drink</span></li>
+                    <li class="about__item"><span class="about__item-bold">4g Plant Protein</span></li>
+                    <li class="about__item"><span class="about__item-bold">Good source of</span> Magnesium & Vitamin B6</li>
+                    <li class="about__item">No Sugar <span class="about__item-bold">in our Savory Flavors</span></li>
+                    <li class="about__item">Non-GMO, Vegan & Paleo</li>
+                    <li class="about__item">Gluten-Free & Grain-Free</li>
+                    <li class="about__item">Corn-Free & Soy-Free</li>
                 </ul>
 
                 <a class="about__link" href="">About Organic Smoothie</a>
